[package]
name = "pi-async-rt"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"
description = "Based on future (MVP), a universal asynchronous runtime and tool used to provide a foundation for the outside world"
repository = "https://github.com/GaiaWorld/pi_async.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "async"]

[features]
serial = []

[dependencies]
libc = "0.2"
futures = "0.3"
async-stream = "0.3"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
st3 = "0.4"
flume = "0.10"
parking_lot = "0.11"
rand = { version = "0.8", features = ["std", "std_rng"] }
num_cpus = "1.13"
backtrace = "0.3"
slotmap = "1.0"
quanta = "0.10"
log = "0.4"
wrr = { package = "pi_wrr",  version = "0.1.1"}
pi_hash = "0.1"
pi_cancel_timer = "0.2"
pi_timer = "0.1"
pi_time = "0.2"
profiling = { version = "1.0", features = ["profile-with-puffin"] }
puffin-imgui = "0.20"
imgui = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = "0.7"
tokio = { version = "1.26", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
minstant = "0.1"

[dev-dependencies]
future-parking_lot = "0.3"
futures-util = "0.3"
tokio = { version = "1.26", features = ["full"] }
async-stream = "0.3"
async-lock = "2.7"
twox-hash = "1.5"
dashmap = "3.11"
env_logger = "0.7"
lazy_static = "1.4"
async-std = "1.12.0"
profiling = { version = "1.0", features = ["profile-with-puffin"] }
puffin-imgui = "0.20"
imgui = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = "0.7"